--- a/main/resources/assets/ninjinentities/lang/zh_CN.lang
+++ b/main/resources/assets/ninjinentities/lang/zh_CN.lang
@@ -220,6 +220,7 @@ entity.ninjinentities.wings.name=多洛达波
 entity.ninjinentities.zeeun.name=杰乌炎
 entity.ninjinentities.android13.name=人造人13号
 entity.ninjinentities.android13Super.name=超级人造人13号
+entity.ninjinentities.Super17.name=超级人造人17号
 entity.ninjinentities.android14.name=人造人14号
 entity.ninjinentities.android15.name=人造人15号
 entity.ninjinentities.arbee.name=Arbee
