--- a/main/resources/assets/ninjinentities/lang/zh_CN.lang
+++ b/main/resources/assets/ninjinentities/lang/zh_CN.lang
@@ -42,6 +42,10 @@ entity.ninjinentities.krillin2.name=克林
 entity.ninjinentities.krillinKid1.name=克林
 entity.ninjinentities.krillinKid2.name=克林
 entity.ninjinentities.piccolo.name=比克
+entity.ninjinentities.piccolo2.name=比克
+entity.ninjinentities.piccolo3.name=潜力释放比克
+entity.ninjinentities.piccolo4.name=橙色比克
+entity.ninjinentities.piccolo5.name=巨大化橙色比克
 entity.ninjinentities.PiccoloInjury.name=比克
 entity.ninjinentities.oozaru.name=巨猿
 entity.ninjinentities.roshi.name=Muten Roshi
@@ -220,7 +224,7 @@ entity.ninjinentities.wings.name=多洛达波
 entity.ninjinentities.zeeun.name=杰乌炎
 entity.ninjinentities.android13.name=人造人13号
 entity.ninjinentities.android13Super.name=超级人造人13号
-entity.ninjinentities.Super17.name=超级人造人17号
+entity.ninjinentities.super17.name=超级人造人17号
 entity.ninjinentities.android14.name=人造人14号
 entity.ninjinentities.android15.name=人造人15号
 entity.ninjinentities.arbee.name=Arbee
