The model of Super Android 17 has been modified and high-definition textures have been created

--- a/main/resources/assets/ninjinentities/lang/en_US.lang
+++ b/main/resources/assets/ninjinentities/lang/en_US.lang
@@ -42,6 +42,10 @@ entity.ninjinentities.krillin2.name=Krillin
 entity.ninjinentities.krillinKid1.name=Krillin
 entity.ninjinentities.krillinKid2.name=Krillin
 entity.ninjinentities.piccolo.name=Piccolo
+entity.ninjinentities.Piccolo2.name=Piccolo
+entity.ninjinentities.Piccolo3.name=Piccolo
+entity.ninjinentities.Piccolo4.name=Piccolo
+entity.ninjinentities.Piccolo5.name=Piccolo
 entity.ninjinentities.PiccoloInjury.name=PiccoloInjury
 entity.ninjinentities.oozaru.name=Oozaru
 entity.ninjinentities.roshi.name=Muten Roshi
@@ -171,13 +175,6 @@ entity.ninjinentities.nappaDamaged.name=Nappa
 entity.ninjinentities.cell4.name=Cell
 entity.ninjinentities.masterBaba.name=Baba
 entity.ninjinentities.recoomeDamaged.name=Recoome
-entity.ninjinentities.bioWarrior1.name=Bio-Warrior
-entity.ninjinentities.bioWarrior2.name=Bio-Warrior
-entity.ninjinentities.bioWarrior3.name=Bio-Warrior
-entity.ninjinentities.bioWarrior4.name=Bio-Warrior
-entity.ninjinentities.bioWarrior5.name=Bio-Warrior
-entity.ninjinentities.bioWarrior6.name=Bio-Warrior
-entity.ninjinentities.brolyZBio.name=Broly
 entity.ninjinentities.bido.name=Bido
 entity.ninjinentities.bojack.name=Bojack
 entity.ninjinentities.bojackSuper.name=Bojack
@@ -256,21 +253,29 @@ entity.ninjinentities.aka.name=Aka
 entity.ninjinentities.bb.name=beibi
 entity.ninjinentities.bbssj.name=beibissj
 entity.ninjinentities.bbssj2.name=beibissj2
-entity.ninjinentities.hsfls.name=hsfls
-entity.ninjinentities.zsfls.name=zsfls
-entity.ninjinentities.bdk.name=bdk
-entity.ninjinentities.bdkmj.name=bdk
-entity.ninjinentities.vegetaSs4.name=vegetaSs4
-entity.ninjinentities.qed.name=qed
-entity.ninjinentities.hjcell.name=hjcell
-entity.ninjinentities.kanbassj.name=kanbassj
-entity.ninjinentities.kanbassj2.name=kanbassj2
-entity.ninjinentities.kanbassj3.name=kanbassj3
-entity.ninjinentities.kanbassjoozaru.name=kanbassjoozaru
-entity.ninjinentities.hjgl.name=hjgl
-entity.ninjinentities.zsgl.name=zsgl
-entity.ninjinentities.Bzgokussj.name=Bzgokussj
+entity.ninjinentities.hsfls.name=Frieza
+entity.ninjinentities.zsfls.name=Frieza
+entity.ninjinentities.bdk.name=Burdock
+entity.ninjinentities.bdkssj.name=Burdock ssj
+entity.ninjinentities.bdkssj3.name=Burdock ssj3
+entity.ninjinentities.bdkssjb.name=Burdock ssjb
+entity.ninjinentities.bdkssjb3.name=Burdock ssjb3
+entity.ninjinentities.qed.name=child
+entity.ninjinentities.hjcell.name=Cell
+entity.ninjinentities.kanbassj.name=Cumber ssj
+entity.ninjinentities.kanbassj2.name=Cumber ssj2
+entity.ninjinentities.kanbassj3.name=Cumber ssj3
+entity.ninjinentities.kanbassjoozaru.name=Cumber oozaru
+entity.ninjinentities.hjgl.name=Cooler
+entity.ninjinentities.zsgl.name=Cooler
+entity.ninjinentities.Bzgokussj.name=goku
 entity.ninjinentities.fu.name=fu
-entity.ninjinentities.glnl.name=glnl
-entity.ninjinentities.jiasi.name=jiasi
-entity.ninjinentities.Mira.name=Mira
+entity.ninjinentities.glnl.name=granola
+entity.ninjinentities.jiasi.name=Gas
+entity.ninjinentities.mara.name=MORO
+entity.ninjinentities.mara2.name=MORO
+entity.ninjinentities.mara3.name=MORO
+entity.ninjinentities.Gamma1.name=Gamma1
+entity.ninjinentities.Gamma2.name=Gamma2
+entity.ninjinentities.cellmax.name=cellmax
+
