--- a/main/resources/assets/ninjinentities/lang/zh_CN.lang
+++ b/main/resources/assets/ninjinentities/lang/zh_CN.lang
@@ -43,9 +43,9 @@ entity.ninjinentities.krillinKid1.name=克林
 entity.ninjinentities.krillinKid2.name=克林
 entity.ninjinentities.piccolo.name=比克
 entity.ninjinentities.piccolo2.name=比克
-entity.ninjinentities.piccolo3.name=潜力释放比克
-entity.ninjinentities.piccolo4.name=橙色比克
-entity.ninjinentities.piccolo5.name=巨大化橙色比克
+entity.ninjinentities.Piccolo3.name=潜力释放比克
+entity.ninjinentities.Piccolo4.name=橙色比克
+entity.ninjinentities.Piccolo5.name=巨大化橙色比克
 entity.ninjinentities.PiccoloInjury.name=比克
 entity.ninjinentities.oozaru.name=巨猿
 entity.ninjinentities.roshi.name=Muten Roshi
@@ -172,7 +172,7 @@ entity.ninjinentities.brolySuperSsjL.name=布罗利
 entity.ninjinentities.zarbon1.name=Zarbon
 entity.ninjinentities.zarbon2.name=Zarbon
 entity.ninjinentities.nail.name=Nail
-entity.ninjinentities.ginyuGoku.name=Ginyu
+entity.ninjinentities.ginyuGoku.name=基纽
 entity.ninjinentities.spopovich.name=Spopovich
 entity.ninjinentities.yamu.name=Yamu
 entity.ninjinentities.majinSoldier1.name=Majin Soldier
@@ -182,7 +182,7 @@ entity.ninjinentities.raditz.name=拉蒂兹
 entity.ninjinentities.kanba.name=kanba
 entity.ninjinentities.nappa.name=Nappa
 entity.ninjinentities.nappaDamaged.name=Nappa
-entity.ninjinentities.cell4.name=Cell
+entity.ninjinentities.cell4.name=沙鲁
 entity.ninjinentities.masterBaba.name=Baba
 entity.ninjinentities.recoomeDamaged.name=Recoome
 entity.ninjinentities.bido.name=Bido
@@ -268,7 +268,6 @@ entity.ninjinentities.bbssj2.name=贝比超二
 entity.ninjinentities.hsfls.name=黑金弗利萨
 entity.ninjinentities.zsfls.name=钻石弗利萨
 entity.ninjinentities.bdk.name=巴达克
-entity.ninjinentities.bdkmj.name=神秘面具人
 entity.ninjinentities.bdkssj.name=巴达克超赛
 entity.ninjinentities.bdkssj3.name=巴达克超三
 entity.ninjinentities.bdkssjb.name=巴达克超蓝
