--- a/main/resources/assets/ninjinentities/lang/en_US.lang
+++ b/main/resources/assets/ninjinentities/lang/en_US.lang
@@ -22,6 +22,7 @@ entity.ninjinentities.gokunoweight.name=Goku
 entity.ninjinentities.gokuSsj.name=Goku
 entity.ninjinentities.gokuSsj2.name=Goku
 entity.ninjinentities.gokuSsj3.name=Goku
+entity.ninjinentities.gokuSsj4.name=Goku
 entity.ninjinentities.gokuSsjg.name=Goku
 entity.ninjinentities.gokuSsjb.name=Goku
 entity.ninjinentities.gokuSsjbr.name=Goku
@@ -85,6 +86,7 @@ entity.ninjinentities.vegeta2.name=Vegeta
 entity.ninjinentities.vegeta2Ssj.name=Vegeta
 entity.ninjinentities.vegeta2Ssj2.name=Vegeta
 entity.ninjinentities.vegetaSsjg.name=Vegeta
+entity.ninjinentities.vegetaSsj4.name=Vegeta
 entity.ninjinentities.vegetaSsjb.name=Vegeta
 entity.ninjinentities.vegetaSsjbe.name=Vegeta
 entity.ninjinentities.vegetaMajin.name=Majin Vegeta
@@ -250,24 +252,24 @@ entity.ninjinentities.hirudegarnPost.name=Hirudegarn
 entity.ninjinentities.abo.name=Abo
 entity.ninjinentities.kado.name=Kado
 entity.ninjinentities.aka.name=Aka
-entity.ninjinentities.bb.name=beibi
-entity.ninjinentities.bbssj.name=beibissj
-entity.ninjinentities.bbssj2.name=beibissj2
-entity.ninjinentities.hsfls.name=Frieza
-entity.ninjinentities.zsfls.name=Frieza
+entity.ninjinentities.bb.name=Baby
+entity.ninjinentities.bbssj.name=Baby ssj
+entity.ninjinentities.bbssj2.name=Baby ssj2
+entity.ninjinentities.hsfls.name=Black Gold Frieza
+entity.ninjinentities.zsfls.name=Diamond Frieza
 entity.ninjinentities.bdk.name=Burdock
 entity.ninjinentities.bdkssj.name=Burdock ssj
 entity.ninjinentities.bdkssj3.name=Burdock ssj3
 entity.ninjinentities.bdkssjb.name=Burdock ssjb
 entity.ninjinentities.bdkssjb3.name=Burdock ssjb3
 entity.ninjinentities.qed.name=child
-entity.ninjinentities.hjcell.name=Cell
+entity.ninjinentities.hjcell.name=gold Cell
 entity.ninjinentities.kanbassj.name=Cumber ssj
 entity.ninjinentities.kanbassj2.name=Cumber ssj2
 entity.ninjinentities.kanbassj3.name=Cumber ssj3
 entity.ninjinentities.kanbassjoozaru.name=Cumber oozaru
-entity.ninjinentities.hjgl.name=Cooler
-entity.ninjinentities.zsgl.name=Cooler
+entity.ninjinentities.hjgl.name=gold Cooler
+entity.ninjinentities.zsgl.name=Diamond Cooler
 entity.ninjinentities.Bzgokussj.name=goku
 entity.ninjinentities.fu.name=fu
 entity.ninjinentities.glnl.name=granola
