--- a/main/resources/assets/ninjinentities/lang/zh_CN.lang
+++ b/main/resources/assets/ninjinentities/lang/zh_CN.lang
@@ -22,14 +22,15 @@ entity.ninjinentities.gokunoweight.name=悟空
 entity.ninjinentities.gokuSsj.name=悟空超一
 entity.ninjinentities.gokuSsj2.name=悟空超二
 entity.ninjinentities.gokuSsj3.name=悟空超三
-entity.ninjinentities.gokuSsjg.name=悟空超赛神
-entity.ninjinentities.gokuSsjb.name=悟空超蓝
+entity.ninjinentities.gokuSsj4.name=悟空超四
+entity.ninjinentities.gokuSsjg.name=超赛神悟空
+entity.ninjinentities.gokuSsjb.name=超蓝悟空
 entity.ninjinentities.gokuSsjbr.name=悟空
 entity.ninjinentities.gokuSuper.name=悟空
 entity.ninjinentities.gokuSuperSsj.name=悟空超一
 entity.ninjinentities.gokuSuperSsjb.name=悟空超蓝
-entity.ninjinentities.gokuUi.name=悟空自在兆
-entity.ninjinentities.gokuUiM.name=悟空完美自在
+entity.ninjinentities.gokuUi.name=自在兆悟空
+entity.ninjinentities.gokuUiM.name=完美自在悟空
 entity.ninjinentities.gokuYardrat.name=悟空
 entity.ninjinentities.gokuYardratSsj.name=悟空
 entity.ninjinentities.goten.name=孙悟天
@@ -101,6 +102,7 @@ entity.ninjinentities.vegetaCopy.name=复制贝吉塔
 entity.ninjinentities.vegetaBlueCopy.name=复制贝吉塔
 entity.ninjinentities.vegetaSuper.name=贝吉塔
 entity.ninjinentities.vegetaSuperSsj.name=贝吉塔
+entity.ninjinentities.vegetaSsj4.name=贝吉塔超四
 entity.ninjinentities.vegetaSuperSsjb.name=贝吉塔
 entity.ninjinentities.Vegetazw.name=自我极易贝吉塔
 entity.ninjinentities.vegetaSs4.name=超四贝吉塔
