Optimize AI and dodge

--- a/main/resources/assets/ninjinentities/lang/zh_CN.lang
+++ b/main/resources/assets/ninjinentities/lang/zh_CN.lang
@@ -273,9 +273,9 @@ entity.ninjinentities.hirudegarnPost.name=希尔德刚
 entity.ninjinentities.abo.name=Abo
 entity.ninjinentities.kado.name=Kado
 entity.ninjinentities.aka.name=Aka
-entity.ninjinentities.bb.name=贝比
-entity.ninjinentities.bbssj.name=贝比超一
-entity.ninjinentities.bbssj2.name=贝比超二
+entity.ninjinentities.beibi.name=贝比
+entity.ninjinentities.beibissj.name=贝比超一
+entity.ninjinentities.beibissj2.name=贝比超二
 entity.ninjinentities.hsfls.name=黑金弗利萨
 entity.ninjinentities.zsfls.name=钻石弗利萨
 entity.ninjinentities.bdk.name=巴达克
@@ -307,32 +307,32 @@ entity.ninjinentities.Tamagami3.name=球神3号
 entity.ninjinentities.Kaioshin.name=界王神辛
 entity.ninjinentities.KaioshinChild.name=小孩界王神辛
 entity.ninjinentities.DAIMAPorunga.name=大魔波仑伽
-entity.ninjinentities.EntityDAIMAVegetaSsj3.name=大魔超三贝吉塔
-entity.ninjinentities.EntityGomahThirdEye.name=第三魔眼戈麻
-entity.ninjinentities.EntityGomahThirdEyeGigantic.name=第三魔眼戈麻【强化】
+entity.ninjinentities.DAIMAVegetaSsj3.name=大魔超三贝吉塔
+entity.ninjinentities.GomahThirdEye.name=第三魔眼戈麻
+entity.ninjinentities.GomahThirdEyeGigantic.name=第三魔眼戈麻【强化】
 entity.ninjinentities.Xicor.name=翟寇
-entity.ninjinentities.EntityXicorSsj.name=翟寇
-entity.ninjinentities.EntityGoldOozaru.name=黄金巨猿
-entity.ninjinentities.EntityBbGoldOozaru.name=贝比黄金巨猿
-entity.ninjinentities.EntityPikkon.name=排骨饭
-entity.ninjinentities.Entityhetilierde.name=利尔德
-entity.ninjinentities.Entityomega.name=超级一星龙
-entity.ninjinentities.Entityomega2.name=一星龙
-entity.ninjinentities.Entity2Stars.name=2星龙
-entity.ninjinentities.Entity3Stars.name=3星龙
-entity.ninjinentities.Entity4Stars.name=4星龙
-entity.ninjinentities.Entity4StarsFullPower.name=4星龙
-entity.ninjinentities.Entity5Stars.name=5星龙
-entity.ninjinentities.Entity5StarsFullPower.name=5星龙
-entity.ninjinentities.Entity6Stars.name=6星龙
-entity.ninjinentities.Entity6StarsTrueform.name=6星龙
-entity.ninjinentities.Entity7Stars.name=7星龙
-entity.ninjinentities.Entity7StarsPan.name=7星龙
-entity.ninjinentities.Entity7StarsTrue.name=7星龙
-entity.ninjinentities.Entitylude.name=路德
-entity.ninjinentities.EntityludeFullPower.name=路德
-entity.ninjinentities.EntityLedgic.name=雷基克
-entity.ninjinentities.Entitylierde.name=利尔德
-entity.ninjinentities.Entityhetilierde.name=利尔德
+entity.ninjinentities.XicorSsj.name=翟寇
+entity.ninjinentities.GoldOozaru.name=黄金巨猿
+entity.ninjinentities.beibiGoldOozaru.name=贝比黄金巨猿
+entity.ninjinentities.Pikkon.name=排骨饭
+entity.ninjinentities.hetilierde.name=利尔德
+entity.ninjinentities.omega.name=超级一星龙
+entity.ninjinentities.omega2.name=一星龙
+entity.ninjinentities.2Stars.name=2星龙
+entity.ninjinentities.3Stars.name=3星龙
+entity.ninjinentities.4Stars.name=4星龙
+entity.ninjinentities.4StarsFullPower.name=4星龙
+entity.ninjinentities.5Stars.name=5星龙
+entity.ninjinentities.5StarsFullPower.name=5星龙
+entity.ninjinentities.6Stars.name=6星龙
+entity.ninjinentities.6StarsTrueform.name=6星龙
+entity.ninjinentities.7Stars.name=7星龙
+entity.ninjinentities.7StarsPan.name=7星龙
+entity.ninjinentities.7StarsTrue.name=7星龙
+entity.ninjinentities.lude.name=路德
+entity.ninjinentities.ludeFullPower.name=路德
+entity.ninjinentities.Ledgic.name=雷基克
+entity.ninjinentities.lierde.name=利尔德
+entity.ninjinentities.hetilierde.name=利尔德
 
 
